plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

// jar 파일 하나만 생성하게 하는거
jar {
    enabled = false
}

group = 'com.inyro'
version = '0.0.1-SNAPSHOT'
description = 'inyro reservation service'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Swagger
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9"

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'


	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 직렬화용 (jackson)
  
	// JSOUP
	implementation 'org.jsoup:jsoup:1.16.1'

	// JSON
	implementation 'org.json:json:20250517'

	// WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// QueryDSL (Jakarta for Boot 3 / Hibernate 6)
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
